# bin2svg

./: README.md  setup.cfg
bin2svg/: __init__.py  converter.py
tests/: test_converter.py
