[metadata]
name = bin2svg
version = 0.1.0
description = A Python library to convert binary (boolean) matrices to SVG.
long_description = file: README.md
long_description_content_type = text/markdown
author = Max Gallizioli
author_email = max@gallizioli.ca
url = https://github.com/galliz/bin2svg
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
